# saucers

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  docs.yml  rust.yml
examples/: auto_title.rs  desktop_mod.rs  embed_file.rs  empty_app.rs  event_policy.rs  frameless.rs  index.html  main.js  messaging.rs  navigation.rs  reopen.rs  sync_title_icon.rs  title.rs  transparent.rs
include/saucer/modules/: desktop.hpp
private/: cocoa.desktop.impl.hpp  wk.pdf.impl.hpp
saucer-bindings/: CMakeLists.txt
saucer-bindings/include/saucer/: all.rs.h  app.h  preferences.h  scheme.h  stash.h  webview.h  window.h
saucer-bindings/modules/desktop/: CMakeLists.txt
saucer-bindings/modules/desktop/include/saucer/: desktop.h
saucer-bindings/modules/desktop/saucer-desktop/: CMakeLists.txt  LICENSE  README.md
saucer-bindings/modules/desktop/saucer-desktop/.github/workflows/: build.yml
saucer-bindings/modules/desktop/saucer-desktop/private/: instantiate.hpp
saucer-bindings/modules/desktop/saucer-desktop/src/: desktop.cpp  gtk.desktop.cpp  qt.desktop.cpp  win32.desktop.cpp
saucer-bindings/modules/desktop/src/: desktop.cpp
saucer-bindings/modules/pdf/: CMakeLists.txt
saucer-bindings/modules/pdf/saucer-pdf/: CMakeLists.txt
saucer-bindings/modules/pdf/saucer-pdf/include/saucer/modules/: pdf.hpp
saucer-bindings/modules/pdf/saucer-pdf/src/: wk.pdf.impl.mm  wk.pdf.mm
saucer-bindings/modules/pdf/src/: pdf.cpp
saucer-bindings/patches/: cocoa.app.mm.patch  fix-app-quit.patch  fix-empty-message-crash.patch  fix-request-body-crash.patch  optional-default-scripts.patch  wkg.scheme.cpp.patch
saucer-bindings/private/: webview.hpp
saucer-bindings/private/utils/: string.hpp  wrap.hpp
saucer-bindings/saucer/include/saucer/: window.hpp
saucer-bindings/saucer/include/saucer/serializers/glaze/: glaze.hpp
saucer-bindings/saucer/src/: cocoa.app.mm  qt.icon.cpp  qt.webview.cpp  wk.webview.mm  wkg.scheme.cpp  wkg.webview.cpp  wv2.webview.cpp
saucer-bindings/src/: app.cpp  icon.cpp  preferences.cpp  stash.cpp  webview.cpp  window.cpp
src/: app.rs  bindings.rs  capi.rs  cleanup.rs  cocoa.desktop.impl.mm  cocoa.desktop.mm  collector.rs  embed.rs  error.rs  icon.rs  lib.rs  macros.rs  main.rs  navigation.rs  options.rs  pdf.cpp  pdf.rs  permission.rs  policy.rs  prefs.rs  qt.desktop.cpp  qt.pdf.cpp  screen.rs  script.rs  stash.rs  state.rs  status.rs  url.rs  util.rs  webview.rs  webview_events.rs  wkg.pdf.cpp  wv2.pdf.cpp
src/app/: events.rs  mod.rs  options.rs
src/desktop/: desktop.rs  mod.rs  picker.rs
src/scheme/: executor.rs  mod.rs  req.rs  request.rs  res.rs  response.rs
src/webview/: events.rs  mod.rs  options.rs  script.rs  webview.rs
src/window/: decoration.rs  edge.rs  events.rs  mod.rs
tests/: app_test.rs  basic.rs  webview.rs  webview_test.rs
