[package]
name = "saucers"
description = "Rust bindings for saucer, the C++ webview library."
version = "0.3.0-6.0.1"
edition = "2024"
license = "MIT"
homepage = "https://github.com/skjsjhb/saucers"
repository = "https://github.com/skjsjhb/saucers"
readme = "README.md"
exclude = [
    ".cargo/**/*",
    "**/.github/**/*",
    "rust-toolchain.toml",
    ".gitattributes"
]

[build-dependencies]
bindgen = "0.72.0"
cmake = "0.1"
pkg-config = "0.3.32"

[[bin]]
name = "app-test-exec"
path = "src/bin/app_test.rs"
doc = false

[[bin]]
name = "webview-test-exec"
path = "src/bin/webview_test.rs"
doc = false

[lib]
bench = false

[features]
default = ["static-lib", "desktop-mod", "pdf-mod"]
gen-bindings = []
qt5 = []
qt6 = []
static-lib = []
desktop-mod = []
pdf-mod = []
