[package]
name = "saucers"
description = "Rust bindings for saucer, the C++ webview library."
version = "0.5.0-8.0.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/skjsjhb/saucers"
repository = "https://github.com/skjsjhb/saucers"
readme = "README.md"
rust-version = "1.92.0"
exclude = [
    "**/.github/**/*",
    "rust-toolchain.toml",
    ".gitattributes"
]

[dependencies]
thiserror = "2.0.17"
saucer-sys = { git = "https://github.com/skarl3t/saucer-sys", rev = "e26b5bd" }

[build-dependencies]
build-target = "0.8.0"

[lib]
bench = false

[features]
gen-bindings = ["saucer-sys/gen-bindings"]
qt = ["saucer-sys/qt"]
lto = ["saucer-sys/lto"]
