[package]
name = "saucers"
description = "Rust bindings for saucer, the C++ webview library."
version = "0.7.0-8.0.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/skjsjhb/saucers"
repository = "https://github.com/skjsjhb/saucers"
readme = "README.md"
rust-version = "1.88.0"
exclude = [
    "**/.github/**/*",
    "rust-toolchain.toml",
    ".gitattributes"
]

[dependencies]
thiserror = "2.0.18"
saucer-sys = { git = "https://github.com/skarl3t/saucer-sys", rev = "e26b5bd" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"

[build-dependencies]
build-target = "0.8.0"

[dev-dependencies]
libtest-mimic = "0.8.2"

[lib]
bench = false

[[test]]
name = "basic"
path = "tests/basic.rs"
harness = false

[features]
gen-bindings = ["saucer-sys/gen-bindings"]
qt = ["saucer-sys/qt"]
lto = ["saucer-sys/lto"]
